# SnakeGameSDL

./: CMakeLists.txt  README.md  constants.h  game.cpp  game.h  global_build_config.h.in  main.cpp  objects.cpp  objects.h  utils.cpp  utils.h
pixils/: food.pixil  snake_body.pixil  snake_end.pixil  snake_head.pixil  snake_rounding.pixil
sandbox/: Untitled.ipynb  file.cpp  pointers.cpp
sandbox/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
